--- a/01_0.MyDxLibGame2.5D/MyDxLibGame3D.vcxproj.filters
+++ b/01_0.MyDxLibGame2.5D/MyDxLibGame3D.vcxproj.filters
@@ -22,7 +22,7 @@
     <ClCompile Include="WorldSprite.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Enemy.cpp">
+    <ClCompile Include="Object.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -39,8 +39,6 @@
     <ClInclude Include="WorldSprite.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Enemy.h">
-      <Filter>ソース ファイル</Filter>
-    </ClInclude>
+    <ClInclude Include="Object.h" />
   </ItemGroup>
 </Project>
